syntax = "proto3";

/* index for panmap seedmer placement */

message SeedmerMutation {
    bool is_deletion = 1;
    int32 pos = 2;
    int32 prefix_start = 3;
    string suffix = 4;
}

message NodeSeedmerMutations {
    string node_id = 1;
    repeated SeedmerMutation mutations = 2;
}

message SeedmerIndex {
    int32 k = 1;
    int32 s = 2;
    int32 j = 3;
    repeated NodeSeedmerMutations per_node_mutations = 4;
}